Note, the changes for the last STABLE release start with release
2.4.18.

-------------------------------------------------------------------

Changes in alpha release 2.5.11 (not released yet)

* New extended variable $[w.desk].

* New options WindowLayer and Layers to the Maximize command.

-------------------------------------------------------------------

Changes in alpha release 2.5.10 (19-Mar-2004)

* New command FakeKeyPress.

* New BugOpts option ExplainWindowPlacement.

* Adjustable button reliefs in FvwmIconMan (option ReliefThickness).

* Security patch in fvwm-bug.
  See http://securitytracker.com/alerts/2004/Jan/1008781.html

* Security fixes in
    fvwm-menu-directory (BugTraq id 9161)
    fvwm_make_directory_menu.sh
    fvwm_make_browse_menu.sh

-------------------------------------------------------------------

Changes in alpha release 2.5.9 (2-Mar-2004)

* New MenuStyle options PopupIgnore and PopupClose.

* New configure option --disable-iconv to disable iconv support.

* New extended variables $[w.iconfile] and $[w.miniiconfile].

* New Style option Unmanaged.  Such windows are not managed by
  fvwm.

* New binding context 'U' for unmanaged windows, similar to 'R'oot.

* New option DisplayNewWindowNames to the BugOpts command.

* Security fix for fvwm-menu-directory.
  Se BugTraq id 9161.

-------------------------------------------------------------------

Changes in development release 2.5.8 (31-Oct-2003)

* New prefix command KeepRc.

* Renamed the Cond command to TestRc, and the On command to Test.
  Removed the CondCase command.  Use "KeepRc TestRc" instead.

* The Break command can be told the number of nested function
  levels to break out of.  Break now has a return code of -2
  ("Break").

* Directions can be abbreviated with -, _, [, ], <, >, v or ^ like
  in key or mouse bindings.

* New extended variable $[func.context].

* New Style option MoveByProgramMethod.  Tries to autodetect