@@ -7,7 +7,8 @@ Changes in alpha release 2.5.11 (not released yet)
 
 * New extended variable $[w.desk].
 
-* New options WindowLayer and Layers to the Maximize command.
+* New options GrowOnWindowLayer and GrowOnlayers to the Maximize
+  command.
 
 -------------------------------------------------------------------
 
